added documentation for the project

--- a/proof_of_concept.ipynb
+++ b/proof_of_concept.ipynb
@@ -28,6 +28,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "32bc31ad",
+   "metadata": {},
+   "source": [
+    "My code requires a number of secret API keys to run. They are stored in my env file.\n",
+    "\n",
+    "The imports are basic. I need regex to clean text data, requests to interact with APIs, and openai to interact with their specific API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "4103b1ac",
@@ -43,6 +53,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6db7d32",
+   "metadata": {},
+   "source": [
+    "I need to set openai's api key variable in order to properly use the openai library."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "67e765d0",
@@ -53,6 +71,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9bfd47f",
+   "metadata": {},
+   "source": [
+    "Declaring the url for the news API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "4544e8e5",
@@ -60,6 +86,14 @@
    "outputs": [],
    "source": [
     "url = f\"https://newsapi.org/v2/top-headlines?country=us&apiKey={API_KEY}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f152a10",
+   "metadata": {},
+   "source": [
+    "Making a request of the news API and verifying I get an acceptable response."
    ]
   },
   {
@@ -82,6 +116,17 @@
    "source": [
     "response = requests.get(url)\n",
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a88403d6",
+   "metadata": {},
+   "source": [
+    "Checking out the contents, I can see a number of useful fields:\n",
+    "- Title\n",
+    "- Description\n",
+    "- Content"
    ]
   },
   {
@@ -269,6 +314,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "98f4907f",
+   "metadata": {},
+   "source": [
+    "Using a simple list comprehension, I can iterate through the response object and extract the pieces of information I find most useful."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "545ad66b",
@@ -301,6 +354,14 @@
     "    contents.append(article['content'])\n",
     "    \n",
     "len(titles), len(descriptions), len(contents)    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5c9e798",
+   "metadata": {},
+   "source": [
+    "The titles are concise and descriptive."
    ]
   },
   {
@@ -344,6 +405,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a21504f8",
+   "metadata": {},
+   "source": [
+    "The descriptions can be hit or miss. The first description fails to offer any insight into the Israel-Hamas conflict. Other descriptions lend additional context to headlines, such as the one regarding Grand Canyon University where it explains why the school was fined the record amount."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "ae30bb42",
@@ -384,6 +453,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce512e94",
+   "metadata": {},
+   "source": [
+    "I'm going to feed one of these headlines to ChatGPT and see if it can describe a funny meme."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "4d033d65",
@@ -391,6 +468,14 @@
    "outputs": [],
    "source": [
     "model = 'gpt-3.5-turbo'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0047233b",
+   "metadata": {},
+   "source": [
+    "This model prompt is based on the intial response I got from ChatGPT. When I asked it in the browser to make a meme based on a headline, it informed me that it cannot directly generate a meme. Instead, it's able to provide the following pieces of information: a description of the image, the top text, and the bottom text. I decided to format all future prompts with the same structure that was suggested by ChatGPT."
    ]
   },
   {
@@ -411,6 +496,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70ecf037",
+   "metadata": {},
+   "source": [
+    "Making the API call and collecting the response."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "ae2a8ef8",
@@ -419,6 +512,14 @@
    "source": [
     "response = openai.ChatCompletion.create(model=model,\n",
     "                                        messages=[{'role': 'user', 'content': user_content}])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b8a8887",
+   "metadata": {},
+   "source": [
+    "Response objects from openai tend to be complex. Thanks to previous projects, I already know how to unpack the response object to retrieve the contents."
    ]
   },
   {
@@ -463,6 +564,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee1d8d8b",
+   "metadata": {},
+   "source": [
+    "Using my past code, I get the response. The text is a little messy, but the content matches the format I supplied in the prompt."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "id": "f3f327c1",
@@ -485,6 +594,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e7f83880",
+   "metadata": {},
+   "source": [
+    "With a little regex, I can clean up some of the undesireable characters. I'm able to get rid of the escape characters that exist before the quotation marks."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "717706e9",
@@ -504,6 +621,14 @@
    "source": [
     "clean_content = re.sub(r\"[^a-zA-Z0-9':\\s\\.]\", \"\", response_content)\n",
     "clean_content"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21ede140",
+   "metadata": {},
+   "source": [
+    "Like past code, I can separate the responses into three parts using the double newline characters."
    ]
   },
   {
@@ -531,6 +656,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "70802702",
+   "metadata": {},
+   "source": [
+    "Sometimes there are additional newline characters I need to weed out."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
    "id": "467bc181",
@@ -553,6 +686,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85ac1205",
+   "metadata": {},
+   "source": [
+    "I can define a basic function to capture everything after the colon and space in the response objects. This removes the formatting (image, text at the top, text at the bottom) from the responses and leaves me with the response. I can use these responses to generate memes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "f50393d8",
@@ -564,6 +705,14 @@
     "    regexp = r\"^.*?:\\s(.*)\"\n",
     "    \n",
     "    return re.search(regexp, text).groups()[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69501698",
+   "metadata": {},
+   "source": [
+    "Testing my function."
    ]
   },
   {
@@ -585,6 +734,14 @@
    ],
    "source": [
     "extract(top)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd0f6c17",
+   "metadata": {},
+   "source": [
+    "My function works for all three pieces of information."
    ]
   },
   {
@@ -614,6 +771,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2a4d683b",
+   "metadata": {},
+   "source": [
+    "The phrase \"Donald Trump\" causes my prompt to be disallowed by the openai safety measures. I substitute \"a man made of oranges\" for his name to bypass the filter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "b26e87e5",
@@ -636,6 +801,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe6b4f2c",
+   "metadata": {},
+   "source": [
+    "I can ship off the prompt to DALL-E. It returns a url, from which I can request the image itself."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "93f2cad2",
@@ -644,6 +817,14 @@
    "source": [
     "gen_image = openai.Image.create(prompt=mod_image, n=1, size=\"512x512\")\n",
     "image_url = gen_image['data'][0]['url']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83ae178b",
+   "metadata": {},
+   "source": [
+    "The image url is a complete mess. Good thing I can access it programmatically."
    ]
   },
   {
@@ -668,6 +849,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3e5e59c3",
+   "metadata": {},
+   "source": [
+    "I can make a follow-up request of the image url and save the image to a file. I need to specify the filename and make sure I am writing to the file in binary with 'wb'."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "b3f5aa2f",
@@ -678,6 +867,14 @@
     "\n",
     "with open('really_orange_man.jpeg', 'wb') as f:\n",
     "    f.write(img_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcf469ee",
+   "metadata": {},
+   "source": [
+    "The following code is copied from the meme generation endpoint testing website. It doesn't work, because it returns a 500 response from the post request."
    ]
   },
   {
@@ -716,6 +913,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "be715bae",
+   "metadata": {},
+   "source": [
+    "If I open the file and then save it to the files dictionary, I'm able to post my image to the API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "26d0109d",
@@ -727,6 +932,14 @@
     "    \n",
     "    response = requests.post(upload_url, files=files, headers=headers)\n",
     "    response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1dd0098",
+   "metadata": {},
+   "source": [
+    "I get a response object from my post request. It tells me my request was successful and it supplies the name of the uploaded image. I can use the name of the image to create memes using the image in future API calls."
    ]
   },
   {
@@ -751,6 +964,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1f134f31",
+   "metadata": {},
+   "source": [
+    "I can make a request of the upload url to verify my image was uploaded successfully."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "id": "07d9cb42",
@@ -770,6 +991,14 @@
    "source": [
     "response = requests.get(upload_url, headers=headers)\n",
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "250e096c",
+   "metadata": {},
+   "source": [
+    "There are a lot of images available. Mine are added at the bottom, which seems to be caused by my lowercase filenames."
    ]
   },
   {
@@ -1793,6 +2022,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0286579",
+   "metadata": {},
+   "source": [
+    "I can generate memes using existing images at the API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "38697e25",
@@ -1821,6 +2058,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c1c94c8e",
+   "metadata": {},
+   "source": [
+    "Checking out the headers that accompany the response from the API."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "ee2c3ced",
@@ -1844,6 +2089,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a4138468",
+   "metadata": {},
+   "source": [
+    "I can write the content of the response (the meme) to my filesystem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "f0c14596",
@@ -1852,55 +2105,6 @@
    "source": [
     "with open('first_gen.jpeg', 'wb') as f:\n",
     "    f.write(response.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "a4e1d182",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Response [500]>"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gen_url = \"https://ronreiter-meme-generator.p.rapidapi.com/meme\"\n",
-    "\n",
-    "querystring = {\"top\": ex_top, \"bottom\": ex_bottom, \"meme\": \"really-orange-man\",\n",
-    "               \"font_size\": \"30\", \"font\": \"Impact\"}\n",
-    "\n",
-    "response = requests.get(gen_url, headers=headers, params=querystring)\n",
-    "\n",
-    "response"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "fcfda03a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Date': 'Wed, 01 Nov 2023 22:09:08 GMT', 'Content-Type': 'text/html; charset=utf-8', 'Transfer-Encoding': 'chunked', 'Connection': 'keep-alive', 'NEL': '{\"success_fraction\":0,\"report_to\":\"cf-nel\",\"max_age\":604800}', 'CF-Cache-Status': 'DYNAMIC', 'Report-To': '{\"endpoints\":[{\"url\":\"https:\\\\/\\\\/a.nel.cloudflare.com\\\\/report\\\\/v3?s=JpvdB%2Br2AzTMidiU%2BNdeLf97uZfb5qdaBW%2BxlL9evq5kDRmo1SMKZMt7lkurzSL3UomSMxoO%2BrhekAYOpunOSQydvtt%2Bc26egV0lTA58osU3V0qK5kVy8pVCCxxUFQ%3D%3D\"}],\"group\":\"cf-nel\",\"max_age\":604800}', 'alt-svc': 'h3=\":443\"; ma=86400', 'CF-RAY': '81f775dbae3482bd-IAD', 'X-RateLimit-requests-Limit': '1000', 'X-RateLimit-requests-Remaining': '988', 'X-RateLimit-requests-Reset': '2589393', 'Server': 'RapidAPI-1.2.8', 'X-RapidAPI-Version': '1.2.8', 'X-RapidAPI-Region': 'AWS - us-east-1'}"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.headers"
    ]
   },
   {
