--- a/troubleshoot.ipynb
+++ b/troubleshoot.ipynb
@@ -28,6 +28,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "54f52e36",
+   "metadata": {},
+   "source": [
+    "I have a number of libraries imported. I need to test saving/opening files using the json library and timestamping objects with the json library. This notebook is for miscellaneous troubleshooting that popped up during the meme_button.py development process."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "991c970a",
@@ -42,6 +50,14 @@
     "import time\n",
     "\n",
     "from env import API_KEY, OPENAI_API_KEY, MEME_KEY"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03fe6b6e",
+   "metadata": {},
+   "source": [
+    "I need some headlines from the news API."
    ]
   },
   {
@@ -67,6 +83,14 @@
     "response = requests.get(url)\n",
     "\n",
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bed29f90",
+   "metadata": {},
+   "source": [
+    "The familiar json object."
    ]
   },
   {
@@ -252,6 +276,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e133664",
+   "metadata": {},
+   "source": [
+    "Some of the articles are [Removed]! This was causing errors in my code. I accounted for this in the development of my script."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "c32ba443",
@@ -318,6 +350,14 @@
     "    contents.append(article['content'])\n",
     "    \n",
     "len(titles), len(descriptions), len(contents) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "575ca903",
+   "metadata": {},
+   "source": [
+    "Defining some important variables for interaction with the meme generation API and getting a list of available images from the API."
    ]
   },
   {
@@ -1353,6 +1393,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5d705b0",
+   "metadata": {},
+   "source": [
+    "Looking at the last few entries to see the images I've uploaded."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "23703ece",
@@ -1383,6 +1431,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a1a7f01",
+   "metadata": {},
+   "source": [
+    "Uploading an image to the API using the filepath that includes the name of the folder and file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "2278c077",
@@ -1410,6 +1466,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "89d5c2c1",
+   "metadata": {},
+   "source": [
+    "Writing the headlines to a json file."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "d648a1fb",
@@ -1418,6 +1482,14 @@
    "source": [
     "with open('test.json', 'w') as f:\n",
     "    json.dump(titles, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "016f82ea",
+   "metadata": {},
+   "source": [
+    "Reading them back in from the json file. I will use this in my second script, to retrieve headlines and memes so I can post the memes to X with context."
    ]
   },
   {
@@ -1464,6 +1536,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "636bc8fc",
+   "metadata": {},
+   "source": [
+    "Rounding the currently time (unix timestamp) so I can give all my images and memes unique names. This allows me to programmatically differentiate my images and memes from each other without putting thought into it."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "e68290bf",
@@ -1482,6 +1562,14 @@
    ],
    "source": [
     "round(time.time())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64575d7b",
+   "metadata": {},
+   "source": [
+    "If I don't round the time, things get weird."
    ]
   },
   {
